--- a/material-elements.css
+++ b/material-elements.css
@@ -166,7 +166,8 @@ input[type="checkbox"] {
 		border-color: #40c4ff;
 	}
 	input[type="radio"]::before,
-	input[type="checkbox"]::before {
+	input[type="checkbox"]::before,
+	input[type="checkbox"]::after {
 		content: '';
 		
 		position: absolute;
@@ -179,11 +180,11 @@ input[type="checkbox"] {
 		     -o-transform: scale(0);
 		        transform: scale(0);
 		
-		-webkit-transition-duration: 0.2s;
-		  -moz-transition-duration: 0.2s;
-		   -ms-transition-duration: 0.2s;
-		     -o-transition-duration: 0.2s;
-		        transition-duration: 0.2s;
+		-webkit-transition-duration: 0.1s;
+		   -moz-transition-duration: 0.1s;
+		    -ms-transition-duration: 0.1s;
+		     -o-transition-duration: 0.1s;
+		        transition-duration: 0.1s;
 		-webkit-transition-timing-function: linear;
 		   -moz-transition-timing-function: linear;
 		    -ms-transition-timing-function: linear;
@@ -239,6 +240,40 @@ input[type="checkbox"] {
 		right: 0;
 		bottom: 0;
 	}
+	input[type="checkbox"]::after {
+		background-color: transparent;
+		
+		border: 0 none;
+		border-left-width: 2px;
+		border-left-style: solid;
+		border-bottom-width: 2px;
+		border-bottom-style: solid;
+		border-color: white;
+		
+		left: 0;
+		right: 0;
+		top: 3px;
+		bottom: 3px;
+		
+		-webkit-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
+		   -moz-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
+		    -ms-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
+		     -o-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
+		        transform: scale(0) translate(-1px,-2px) rotate(-45deg);
+		
+		-webkit-transition-duration: 0.25s;
+		   -moz-transition-duration: 0.25s;
+		    -ms-transition-duration: 0.25s;
+		     -o-transition-duration: 0.25s;
+		        transition-duration: 0.25s;
+	}
+		input[type="checkbox"]:checked::after {
+			-webkit-transform: scale(0.9) translateY(-2px) rotate(-45deg);
+			   -moz-transform: scale(0.9) translateY(-2px) rotate(-45deg);
+			    -ms-transform: scale(0.9) translateY(-2px) rotate(-45deg);
+			     -o-transform: scale(0.9) translateY(-2px) rotate(-45deg);
+			        transform: scale(0.9) translateY(-2px) rotate(-45deg);
+		}
 
 /* --------======== RANGE SLIDERS and PROGRESS BARS ========-------- */
 input[type="range"], progress {
