--- a/material-elements.css
+++ b/material-elements.css
@@ -37,6 +37,7 @@ input[type="range"]::-webkit-slider-thumb {
 	     -o-appearance: none;
 	        appearance: none;
 	-webkit-tap-highlight-color: transparent !important;
+	color: inherit;
 	font: inherit;
 	outline: 0 none;
 	text-decoration: none;
