--- a/material-elements.css
+++ b/material-elements.css
@@ -167,36 +167,6 @@ input[type="checkbox"] {
 	input[type="checkbox"]:checked {
 		border-color: #40c4ff;
 	}
-	input[type="radio"]::after,
-	input[type="checkbox"]::after {
-		content: '';
-		
-		position: absolute;
-		
-		background-color: black;
-		
-		-webkit-transform: scale(0);
-		   -moz-transform: scale(0);
-		    -ms-transform: scale(0);
-		     -o-transform: scale(0);
-		        transform: scale(0);
-		
-		-webkit-transition-duration: 0.1s;
-		   -moz-transition-duration: 0.1s;
-		    -ms-transition-duration: 0.1s;
-		     -o-transition-duration: 0.1s;
-		        transition-duration: 0.1s;
-		-webkit-transition-timing-function: linear;
-		   -moz-transition-timing-function: linear;
-		    -ms-transition-timing-function: linear;
-		     -o-transition-timing-function: linear;
-		        transition-timing-function: linear;
-		-webkit-transition-property: -webkit-transform, transform, background-color;
-		   -moz-transition-property: -moz-transform, transform, background-color;
-		    -ms-transition-property: -ms-transform, transform, background-color;
-		     -o-transition-property: -o-transform, transform, background-color;
-		        transition-property: transform, background-color;
-	}
 input[type="radio"] {
 	width: 20px;
 	height: 20px;
@@ -205,23 +175,67 @@ input[type="radio"] {
 	        border-radius: 50%;
 }
 	input[type="radio"]::after {
-		left: 2px;
-		top: 2px;
-		right: 2px;
-		bottom: 2px;
+		content: '';
+		
+		position: absolute;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
 		
 		-webkit-border-radius: 50%;
 		   -moz-border-radius: 50%;
 		        border-radius: 50%;
+		
+		background-color: transparent;
+		
+		-webkit-transition-delay: 0.1s, 0.1s, 0, 0;
+		   -moz-transition-delay: 0.1s, 0.1s, 0, 0;
+		    -ms-transition-delay: 0.1s, 0, 0;
+			 -o-transition-delay: 0.1s, 0, 0;
+			    transition-delay: 0.1s, 0;
+		-webkit-transition-duration: 0.15s, 0.15s 0.1s, 0.1s;
+		   -moz-transition-duration: 0.15s, 0.15s 0.1s, 0.1s;
+		    -ms-transition-duration: 0.15s, 0.1s, 0.1s;
+		     -o-transition-duration: 0.15s, 0.1s, 0.1s;
+		        transition-duration: 0.15s, 0.1s;
+		-webkit-transition-timing-function: linear;
+		   -moz-transition-timing-function: linear;
+		    -ms-transition-timing-function: linear;
+		     -o-transition-timing-function: linear;
+		        transition-timing-function: linear;
+		-webkit-transition-property: -webkit-box-shadow, box-shadow, -webkit-transform, transform;
+		   -moz-transition-property: -moz-box-shadow, box-shadow, -moz-transform, transform;
+		    -ms-transition-property: box-shadow, -ms-transform, transform;
+		     -o-transition-property: box-shadow, -o-transform, transform;
+		        transition-property: box-shadow, transform, background-color;
+		
+		-webkit-box-shadow: inset 0 0 0 0 black;
+		   -moz-box-shadow: inset 0 0 0 0 black;
+		        box-shadow: inset 0 0 0 0 black;
+		
+		-webkit-transform: scale(1);
+		   -moz-transform: scale(1);
+		    -ms-transform: scale(1);
+		     -o-transform: scale(1);
+		        transform: scale(1);
 	}
 		input[type="radio"]:checked::after {
-			background-color: #40c4ff;
+			-webkit-transition-delay: 0, 0, 0.15s, 0.15s;
+			   -moz-transition-delay: 0, 0, 0.15s, 0.15s;
+			    -ms-transition-delay: 0, 0.15s, 0.15s;
+			     -o-transition-delay: 0, 0.15s, 0.15s;
+			        transition-delay: 0, 0.15s;
 			
-			-webkit-transform: scale(1);
-			   -moz-transform: scale(1);
-			    -ms-transform: scale(1);
-			     -o-transform: scale(1);
-			        transform: scale(1);
+			-webkit-box-shadow: inset 0 0 0 10px #40c4ff;
+			   -moz-box-shadow: inset 0 0 0 10px #40c4ff;
+			        box-shadow: inset 0 0 0 10px #40c4ff;
+			
+			-webkit-transform: scale(0.65);
+			   -moz-transform: scale(0.65);
+			    -ms-transform: scale(0.65);
+			     -o-transform: scale(0.65);
+			        transform: scale(0.65);
 		}
 input[type="checkbox"] {
 	width: 18px;
@@ -239,6 +253,14 @@ input[type="checkbox"] {
 		        box-shadow: inset 0 0 0 10px #40c4ff;
 	}
 	input[type="checkbox"]::after {
+		content: '';
+		
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 3px;
+		bottom: 3px;
+		
 		background-color: transparent;
 		
 		border: 0 none;
@@ -248,10 +270,6 @@ input[type="checkbox"] {
 		border-bottom-style: solid;
 		border-color: white;
 		
-		left: 0;
-		right: 0;
-		top: 3px;
-		bottom: 3px;
 		
 		-webkit-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
 		   -moz-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
@@ -259,6 +277,16 @@ input[type="checkbox"] {
 		     -o-transform: scale(0) translate(-1px,-2px) rotate(-45deg);
 		        transform: scale(0) translate(-1px,-2px) rotate(-45deg);
 		
+		-webkit-transition-timing-function: linear;
+		   -moz-transition-timing-function: linear;
+		    -ms-transition-timing-function: linear;
+		     -o-transition-timing-function: linear;
+		        transition-timing-function: linear;
+		-webkit-transition-property: -webkit-transform, transform;
+		   -moz-transition-property: -moz-transform, transform;
+		    -ms-transition-property: -ms-transform, transform;
+		     -o-transition-property: -o-transform, transform;
+		        transition-property: transform;
 		-webkit-transition-duration: 0.25s;
 		   -moz-transition-duration: 0.25s;
 		    -ms-transition-duration: 0.25s;
@@ -266,11 +294,11 @@ input[type="checkbox"] {
 		        transition-duration: 0.25s;
 	}
 		input[type="checkbox"]:checked::after {
-			-webkit-transform: scale(0.9) translateY(-2px) rotate(-45deg);
-			   -moz-transform: scale(0.9) translateY(-2px) rotate(-45deg);
-			    -ms-transform: scale(0.9) translateY(-2px) rotate(-45deg);
-			     -o-transform: scale(0.9) translateY(-2px) rotate(-45deg);
-			        transform: scale(0.9) translateY(-2px) rotate(-45deg);
+			-webkit-transform: scale(0.9) translate(0,-2px) rotate(-45deg);
+			   -moz-transform: scale(0.9) translate(0,-2px) rotate(-45deg);
+			    -ms-transform: scale(0.9) translate(0,-2px) rotate(-45deg);
+			     -o-transform: scale(0.9) translate(0,-2px) rotate(-45deg);
+			        transform: scale(0.9) translate(0,-2px) rotate(-45deg);
 		}
 
 /* --------======== RANGE SLIDERS and PROGRESS BARS ========-------- */
