--- a/material-elements.css
+++ b/material-elements.css
@@ -67,27 +67,17 @@ select[size="1"] {
 		display: inline-block;
 		background-color: d6d7d7;
 	}
-	select,
+	select:not([size]),
 	select[size="1"] {
+		min-width: 0;
 		position: relative;
 		background-color: transparent;
-		background-image: none;
+		background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADgAAAAICAYAAACs/DyzAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFRJREFUeNrUzzEKACAMA8AMPjw/rzoIUlqqTqYQ6JAMBwAcscfQzPBz1r0g5wYqwFsk10gJeIrkPlADVkj6siIwQzIqqgI9klnpd2ArgNEvdV2AAQCCQISyxDe1CAAAAABJRU5ErkJggg==);
+		background-size: 28px 4px;
+		background-position: right center;
+		background-repeat: no-repeat;
+		padding-right: 36px;
 	}
-		select::before,
-		select[size="1"]::before {
-			content: 'aoeu';
-			position: absolute;
-			right: 8px;
-			top: 8px;
-			width: 4px;
-			height: 4px;
-			background-color: green;
-			
-			border-top: 8px solid black;
-			border-left: 8px solid transparent;
-			border-right: 8px solid transparent;
-			border-bottom: 0 solid transparent;
-		}
 	button:hover,
 	*[role="button"]:hover,
 	input[type="button"]:hover,
@@ -100,7 +90,7 @@ select[size="1"] {
 	input[type="button"]:focus,
 	input[type="submit"]:focus,
 	input[type="reset"]:focus,
-	select:focus,
+	select:not([size]):focus,
 	select[size="1"]:focus {
 		background-color: #e2e3e3;
 	}
@@ -110,14 +100,14 @@ select[size="1"] {
 	input[type="button"]:enabled:active,
 	input[type="submit"]:enabled:active,
 	input[type="reset"]:enabled:active,
-	select:enabled:active,
+	select:not([size]):enabled:active,
 	select[size="1"]:enabled:active,
 	button:enabled.active,
 	*[role="button"].active,
 	input[type="button"]:enabled.active,
 	input[type="submit"]:enabled.active,
 	input[type="reset"]:enabled.active,
-	select.active,
+	select:not([size]).active,
 	select[size="1"].active {
 		background-color: #c4c5c5;
 	}
