Do not force uppercase button text on list buttons

--- a/material-widgets.css
+++ b/material-widgets.css
@@ -195,6 +195,7 @@ body {
 			font-family: inherit;
 			font-size: inherit;
 			text-align: left;
+			text-transform: none;
 			
 			border: 0 none;
 			-wekbit-border-radius: 0;
