--- a/material-elements.css
+++ b/material-elements.css
@@ -5,7 +5,7 @@
  */
 
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic);
 
 ::selection {
 	background-color: #40c4ff;
@@ -66,6 +66,7 @@ select[size="1"] {
 	input[type="submit"],
 	input[type="reset"] {
 		text-transform: uppercase;
+		font-weight: 500;
 	}
 	select:not([size]),
 	select[size="1"] {
