--- a/material-elements.css
+++ b/material-elements.css
@@ -5,7 +5,7 @@
  */
 
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Mono:400italic,400|Roboto:400,400italic,500,500italic,700,700italic);
 
 ::selection {
 	background-color: #40c4ff;
@@ -17,10 +17,19 @@
 }
 
 body {
-	font-family: Roboto, Helvetica, Arial, "Droid Sans", sans-serif;
+	font-family: Roboto, "Noto Sans", Helvetica, Arial, "Droid Sans", sans-serif;
 	margin: 0;
 	padding: 24px;
 	background-color: #fafafa;
+}
+
+/* --------======== MONOSPACE ELEMENTS ========--------*/
+code,
+kbd,
+pre,
+samp,
+tt {
+	font-family: "Roboto Mono", "Droid Sans Mono", monospace;
 }
 
 /* --------======== HEADINGS and TYPOGRAPHY ========-------- */
