Update license headers

--- a/material-elements.css
+++ b/material-elements.css
@@ -1,7 +1,9 @@
-/* Base Material styles for elements.
- * Part of the MaterialZ CSS library.
- * Written by Zachary Yaro.
- * https://github.com/zmyaro/materialz
+/* Base Material styles for elements
+ * Part of the MaterialZ CSS library
+ *
+ * Copyright 2015 Zachary Yaro
+ * Released under the MIT license
+ * http://materialz.zmyaro.com/LICENSE.txt
  */
 
 @charset "UTF-8";
