Update toolbar dimensions to better match Polymer

--- a/material-elements.css
+++ b/material-elements.css
@@ -58,7 +58,7 @@ a {
 }
 
 button,
-*[role="button"],
+[role="button"],
 input,
 select,
 textarea {
@@ -75,7 +75,7 @@ textarea {
 
 /* Clickable elements */
 button,
-*[role="button"],
+[role="button"],
 input[type="button"],
 input[type="submit"],
 input[type="reset"],
@@ -88,7 +88,7 @@ select[size="1"] {
 }
 
 /* --------======== BUTTONS and DROP-DOWNS ========-------- */
-button, *[role="button"],
+button, [role="button"],
 input[type="button"],
 input[type="submit"],
 input[type="reset"],
@@ -104,7 +104,7 @@ select[size="1"] {
 	        border-radius: 3px;
 }
 	button,
-	*[role="button"],
+	[role="button"],
 	input[type="button"],
 	input[type="submit"],
 	input[type="reset"] {
@@ -127,14 +127,14 @@ select[size="1"] {
 		text-overflow: '';
 	}
 	button:not(:disabled):hover,
-	*[role="button"]:not(:disabled):hover,
+	[role="button"]:not(:disabled):hover,
 	input[type="button"]:not(:disabled):hover,
 	input[type="submit"]:not(:disabled):hover,
 	input[type="reset"]:not(:disabled):hover,
 	select:not(:disabled):hover,
 	select[size="1"]:not(:disabled):hover,
 	button:focus,
-	*[role="button"]:focus,
+	[role="button"]:focus,
 	input[type="button"]:focus,
 	input[type="submit"]:focus,
 	input[type="reset"]:focus,
@@ -145,14 +145,14 @@ select[size="1"] {
 	}
 	/* The “active” class is used to force the appearance of the active/pressed state */
 	button:not(:disabled):active,
-	*[role="button"]:not(:disabled):active,
+	[role="button"]:not(:disabled):active,
 	input[type="button"]:not(:disabled):active,
 	input[type="submit"]:not(:disabled):active,
 	input[type="reset"]:not(:disabled):active,
 	select:not([size]):not(:disabled):active,
 	select[size="1"]:not(:disabled):active,
 	button:not(:disabled).active,
-	*[role="button"]:not(:disabled).active,
+	[role="button"]:not(:disabled).active,
 	input[type="button"]:not(:disabled).active,
 	input[type="submit"]:not(:disabled).active,
 	input[type="reset"]:not(:disabled).active,
@@ -520,7 +520,7 @@ textarea {
 
 *:disabled,
 button:disabled,
-*[role="button"]:disabled,
+[role="button"]:disabled,
 input[type="button"]:disabled,
 input[type="submit"]:disabled,
 input[type="reset"]:disabled,
