--- a/material-elements.css
+++ b/material-elements.css
@@ -102,6 +102,9 @@ select[size="1"] {
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
 	        border-radius: 3px;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	        user-select: none;
 }
 	button,
 	[role="button"],
