--- a/material-widgets.css
+++ b/material-widgets.css
@@ -55,28 +55,28 @@ body {
 		   -moz-border-radius: 24px;
 				border-radius: 24px;
 	}
-		[role="toolbar"] button:hover,
+		[role="toolbar"] button:not(:disabled):hover,
 		[role="toolbar"] button:focus,
 		[role="toolbar"] [role="button"]:hover,
 		[role="toolbar"] [role="button"]:focus,
-		[role="toolbar"] input[type="button"]:hover,
+		[role="toolbar"] input[type="button"]:not(:disabled):hover,
 		[role="toolbar"] input[type="button"]:focus,
-		[role="toolbar"] input[type="submit"]:hover,
+		[role="toolbar"] input[type="submit"]:not(:disabled):hover,
 		[role="toolbar"] input[type="submit"]:focus,
-		[role="toolbar"] input[type="reset"]:hover,
+		[role="toolbar"] input[type="reset"]:not(:disabled):hover,
 		[role="toolbar"] input[type="reset"]:focus {
 			background-color: rgba(0,0,0,0.07);
 		}
-		[role="toolbar"] button:enabled:active,
-		[role="toolbar"] button:enabled.active,
+		[role="toolbar"] button:not(:disabled):active,
+		[role="toolbar"] button:not(:disabled).active,
 		[role="toolbar"] [role="button"]:active,
 		[role="toolbar"] [role="button"].active,
-		[role="toolbar"] input[type="button"]:active,
-		[role="toolbar"] input[type="button"].active,
-		[role="toolbar"] input[type="submit"]:active,
-		[role="toolbar"] input[type="submit"].active,
-		[role="toolbar"] input[type="reset"]:active,
-		[role="toolbar"] input[type="reset"].active {
+		[role="toolbar"] input[type="button"]:not(:disabled):active,
+		[role="toolbar"] input[type="button"]:not(:disabled).active,
+		[role="toolbar"] input[type="submit"]:not(:disabled):active,
+		[role="toolbar"] input[type="submit"]:not(:disabled).active,
+		[role="toolbar"] input[type="reset"]:not(:disabled):active,
+		[role="toolbar"] input[type="reset"]:not(:disabled).active {
 			background-color: rgba(0,0,0,0.13);
 		}
 		[role="toolbar"] button img,
@@ -131,48 +131,48 @@ body {
 	.appBar > [role="toolbar"] {
 		margin: -20px -16px;
 	}
-		.appBar > [role="toolbar"] button:hover,
+		.appBar > [role="toolbar"] button:not(:disabled):hover,
 		.appBar > [role="toolbar"] button:focus,
 		.appBar > [role="toolbar"] [role="button"]:hover,
 		.appBar > [role="toolbar"] [role="button"]:focus,
-		.appBar > [role="toolbar"] input[type="button"]:hover,
+		.appBar > [role="toolbar"] input[type="button"]:not(:disabled):hover,
 		.appBar > [role="toolbar"] input[type="button"]:focus,
-		.appBar > [role="toolbar"] input[type="submit"]:hover,
+		.appBar > [role="toolbar"] input[type="submit"]:not(:disabled):hover,
 		.appBar > [role="toolbar"] input[type="submit"]:focus,
-		.appBar > [role="toolbar"] input[type="reset"]:hover,
+		.appBar > [role="toolbar"] input[type="reset"]:not(:disabled):hover,
 		.appBar > [role="toolbar"] input[type="reset"]:focus,
-		.appBar[role="toolbar"] button:hover,
+		.appBar[role="toolbar"] button:not(:disabled):hover,
 		.appBar[role="toolbar"] button:focus,
 		.appBar[role="toolbar"] [role="button"]:hover,
 		.appBar[role="toolbar"] [role="button"]:focus,
-		.appBar[role="toolbar"] input[type="button"]:hover,
+		.appBar[role="toolbar"] input[type="button"]:not(:disabled):hover,
 		.appBar[role="toolbar"] input[type="button"]:focus,
-		.appBar[role="toolbar"] input[type="submit"]:hover,
+		.appBar[role="toolbar"] input[type="submit"]:not(:disabled):hover,
 		.appBar[role="toolbar"] input[type="submit"]:focus,
-		.appBar[role="toolbar"] input[type="reset"]:hover,
+		.appBar[role="toolbar"] input[type="reset"]:not(:disabled):hover,
 		.appBar[role="toolbar"] input[type="reset"]:focus {
 			background-color: rgba(255,255,255,0.07);
 		}
-		.appBar > [role="toolbar"] button:enabled:active,
-		.appBar > [role="toolbar"] button:enabled.active,
+		.appBar > [role="toolbar"] button:not(:disabled):active,
+		.appBar > [role="toolbar"] button:not(:disabled).active,
 		.appBar > [role="toolbar"] [role="button"]:active,
 		.appBar > [role="toolbar"] [role="button"].active,
-		.appBar > [role="toolbar"] input[type="button"]:active,
-		.appBar > [role="toolbar"] input[type="button"].active,
-		.appBar > [role="toolbar"] input[type="submit"]:active,
-		.appBar > [role="toolbar"] input[type="submit"].active,
-		.appBar > [role="toolbar"] input[type="reset"]:active,
-		.appBar > [role="toolbar"] input[type="reset"].active,
-		.appBar[role="toolbar"] button:enabled:active,
-		.appBar[role="toolbar"] button:enabled.active,
+		.appBar > [role="toolbar"] input[type="button"]:not(:disabled):active,
+		.appBar > [role="toolbar"] input[type="button"]:not(:disabled).active,
+		.appBar > [role="toolbar"] input[type="submit"]:not(:disabled):active,
+		.appBar > [role="toolbar"] input[type="submit"]:not(:disabled).active,
+		.appBar > [role="toolbar"] input[type="reset"]:not(:disabled):active,
+		.appBar > [role="toolbar"] input[type="reset"]:not(:disabled).active,
+		.appBar[role="toolbar"] button:not(:disabled):active,
+		.appBar[role="toolbar"] button:not(:disabled).active,
 		.appBar[role="toolbar"] [role="button"]:active,
 		.appBar[role="toolbar"] [role="button"].active,
-		.appBar[role="toolbar"] input[type="button"]:active,
-		.appBar[role="toolbar"] input[type="button"].active,
-		.appBar[role="toolbar"] input[type="submit"]:active,
-		.appBar[role="toolbar"] input[type="submit"].active,
-		.appBar[role="toolbar"] input[type="reset"]:active,
-		.appBar[role="toolbar"] input[type="reset"].active {
+		.appBar[role="toolbar"] input[type="button"]:not(:disabled):active,
+		.appBar[role="toolbar"] input[type="button"]:not(:disabled).active,
+		.appBar[role="toolbar"] input[type="submit"]:not(:disabled):active,
+		.appBar[role="toolbar"] input[type="submit"]:not(:disabled).active,
+		.appBar[role="toolbar"] input[type="reset"]:not(:disabled):active,
+		.appBar[role="toolbar"] input[type="reset"]:not(:disabled).active {
 			background-color: rgba(255,255,255,0.13);
 		}
 
@@ -219,29 +219,29 @@ body {
 			   -moz-box-shadow: none;
 			        box-shadow: none;
 		}
-			.list li button:hover,
-			.list li [role="button"]:hover,
-			.list li input[type="button"]:hover,
-			.list li input[type="submit"]:hover,
-			.list li input[type="reset"]:hover,
+			.list li button:not(:disabled):hover,
 			.list li button:focus,
+			.list li [role="button"]:hover,
 			.list li [role="button"]:focus,
+			.list li input[type="button"]:not(:disabled):hover,
 			.list li input[type="button"]:focus,
+			.list li input[type="submit"]:not(:disabled):hover,
 			.list li input[type="submit"]:focus,
+			.list li input[type="reset"]:not(:disabled):hover,
 			.list li input[type="reset"]:focus {
 				background-color: #f2f2f2;
 				background-color: rgba(0, 0, 0, 0.05);
 			}
-			.list li button:enabled:active,
-			.list li button:enabled.active,
+			.list li button:not(:disabled):active,
+			.list li button:not(:disabled).active,
 			.list li [role="button"]:active,
 			.list li [role="button"].active,
-			.list li input[type="button"]:enabled:active,
-			.list li input[type="button"]:enabled.active,
-			.list li input[type="submit"]:enabled:active,
-			.list li input[type="submit"]:enabled.active,
-			.list li input[type="reset"]:enabled:active,
-			.list li input[type="reset"]:enabled.active {
+			.list li input[type="button"]:not(:disabled):active,
+			.list li input[type="button"]:not(:disabled).active,
+			.list li input[type="submit"]:not(:disabled):active,
+			.list li input[type="submit"]:not(:disabled).active,
+			.list li input[type="reset"]:not(:disabled):active,
+			.list li input[type="reset"]:not(:disabled).active {
 				-webkit-box-shadow: none;
 				   -moz-box-shadow: none;
 				        box-shadow: none;
