Set <hr>s and <fieldset>s to have 1px borders

--- a/material-elements.css
+++ b/material-elements.css
@@ -25,6 +25,14 @@ body {
 	background-color: #fafafa;
 }
 
+/* --------======== BORDERS ========--------*/
+hr {
+	border-width: 1px 0 0;
+}
+fieldset {
+	border-width: 1px;
+}
+
 /* --------======== MONOSPACE ELEMENTS ========--------*/
 code,
 kbd,
