--- a/material-elements.css
+++ b/material-elements.css
@@ -281,7 +281,7 @@ input[type="radio"] {
 			     -o-transition-delay: 0, 0.13s, 0.13s;
 			        transition-delay: 0, 0.13s;
 			
-			color: #40c4ff;
+			color: inherit;
 			-webkit-box-shadow: inset 0 0 0 10px;
 			   -moz-box-shadow: inset 0 0 0 10px;
 			        box-shadow: inset 0 0 0 10px;
