--- a/material-elements.css
+++ b/material-elements.css
@@ -195,21 +195,21 @@ input[type="checkbox"] {
 	background-color: transparent;
 	background-repeat: no-repeat;
 	
-	-webkit-transition-duration: 0.125s;
-	   -moz-transition-duration: 0.125s;
-	    -ms-transition-duration: 0.125s;
-	     -o-transition-duration: 0.125s;
-	        transition-duration: 0.125s;
+	-webkit-transition-duration: 0.13s;
+	   -moz-transition-duration: 0.13s;
+	    -ms-transition-duration: 0.13s;
+	     -o-transition-duration: 0.13s;
+	        transition-duration: 0.13s;
 	-webkit-transition-timing-function: linear;
 	   -moz-transition-timing-function: linear;
 	    -ms-transition-timing-function: linear;
 	     -o-transition-timing-function: linear;
 	        transition-timing-function: linear;
-	-webkit-transition-property: border-color, -webkit-box-shadow, box-shadow;
-	   -moz-transition-property: border-color, -moz-box-shadow, box-shadow;
-	    -ms-transition-property: border-color, box-shadow;
-	     -o-transition-property: border-color, box-shadow;
-	        transition-property: border-color, box-shadow;
+	-webkit-transition-property: border-color, color, -webkit-box-shadow, box-shadow;
+	   -moz-transition-property: border-color, color,    -moz-box-shadow, box-shadow;
+	    -ms-transition-property: border-color, color,                     box-shadow;
+	     -o-transition-property: border-color, color,                     box-shadow;
+	        transition-property: border-color, color,                     box-shadow;
 }
 	input[type="radio"]::-ms-check,
 	input[type="checkbox"]::-ms-check {
@@ -242,28 +242,27 @@ input[type="radio"] {
 		
 		background-color: transparent;
 		
-		-webkit-transition-delay: 0.07s, 0.07s, 0, 0;
-		   -moz-transition-delay: 0.07s, 0.07s, 0, 0;
-		    -ms-transition-delay: 0.07s, 0, 0;
-			 -o-transition-delay: 0.07s, 0, 0;
-			    transition-delay: 0.07s, 0;
-		-webkit-transition-duration: 0.13s, 0.13s 0.07s, 0.07s;
-		   -moz-transition-duration: 0.13s, 0.13s 0.07s, 0.07s;
-		    -ms-transition-duration: 0.13s, 0.07s, 0.07s;
-		     -o-transition-duration: 0.13s, 0.07s, 0.07s;
-		        transition-duration: 0.13s, 0.07s;
+		-webkit-transition-delay: 0s, 0s, 0.07s, 0.07s;
+		   -moz-transition-delay: 0s, 0s, 0.07s, 0.07s;
+		    -ms-transition-delay:     0s, 0.07s, 0.07s;
+			 -o-transition-delay:     0s, 0.07s, 0.07s;
+			    transition-delay:     0s,        0.07s;
+		-webkit-transition-duration: 0.13s, 0.13s, 0.07s, 0.07s;
+		   -moz-transition-duration: 0.13s, 0.13s, 0.07s, 0.07s;
+		    -ms-transition-duration:        0.13s, 0.07s, 0.07s;
+		     -o-transition-duration:        0.13s, 0.07s, 0.07s;
+		        transition-duration:        0.13s,        0.07s;
 		-webkit-transition-timing-function: linear;
 		   -moz-transition-timing-function: linear;
 		    -ms-transition-timing-function: linear;
 		     -o-transition-timing-function: linear;
 		        transition-timing-function: linear;
 		-webkit-transition-property: -webkit-box-shadow, box-shadow, -webkit-transform, transform;
-		   -moz-transition-property: -moz-box-shadow, box-shadow, -moz-transform, transform;
-		    -ms-transition-property: box-shadow, -ms-transform, transform;
-		     -o-transition-property: box-shadow, -o-transform, transform;
-		        transition-property: box-shadow, transform, background-color;
+		   -moz-transition-property:    -moz-box-shadow, box-shadow,    -moz-transform, transform;
+		    -ms-transition-property:                     box-shadow,     -ms-transform, transform;
+		     -o-transition-property:                     box-shadow,      -o-transform, transform;
+		        transition-property:                     box-shadow,                    transform;
 		
-		color: black;
 		-webkit-box-shadow: inset 0 0 0 0;
 		   -moz-box-shadow: inset 0 0 0 0;
 		        box-shadow: inset 0 0 0 0;
