--- a/material-elements.css
+++ b/material-elements.css
@@ -120,7 +120,9 @@ select[size="1"] {
 	input[type="submit"],
 	input[type="reset"] {
 		text-transform: uppercase;
+		font-size: 0.875rem;
 		font-weight: 500; /* Medium */
+		padding: 10px 16px 9px;
 	}
 	select:not([size]),
 	select[size="1"] {
