--- a/material-widgets.css
+++ b/material-widgets.css
@@ -44,7 +44,8 @@ body {
 		vertical-align: top;
 		min-width: 0;
 		margin: -8px 0; /* Counter the toolbar's padding */
-		padding: 8px 6px;
+		padding: 12px 10px 11px;
+		font-size: 14px; /* According to Android, toolbar buttons do not scale with base font like other elements do. */
 		
 		background-color: transparent;
 		background-image: none;
@@ -67,7 +68,7 @@ body {
 		[role="toolbar"] input[type="reset"] [role="img"] {
 			width: 24px;
 			height: 24px;
-			margin: -5px 2px;
+			margin: -4px -2px -7px;
 			pointer-events: none;
 		}
 
