Update copyright lines to indicate year of last revision

--- a/fix-old-safari.css
+++ b/fix-old-safari.css
@@ -1,8 +1,8 @@
 /* Base Material styles for elements in Safari < 6
  * These are more difficult to theme, but will improve the appearances of some elements.
- * Part of the MaterialZ CSS library
+ * Supplement to the MaterialZ CSS library
  *
- * Copyright 2015 Zachary Yaro
+ * Copyright 2015-2019 Zachary Yaro
  * Released under the MIT license
  * http://materialz.zmyaro.com/LICENSE.txt
  */
