--- a/material-elements.css
+++ b/material-elements.css
@@ -42,6 +42,15 @@ tt {
 	font-family: "Roboto Mono", "Droid Sans Mono", monospace;
 }
 
+kbd {
+	display: inline-block;
+	padding: 2px 8px;
+	margin: -2px 2px;
+	border-radius: 2px;
+	background-color: rgba(128, 128, 128, 0.25);
+	font: inherit; /* Override the default behavior of <kbd> having a monospace font. */
+}
+
 /* --------======== HEADINGS and TYPOGRAPHY ========-------- */
 h1 {
 	font-size: 150%;
