Change materialz.zmyaro.com links to materialz.dev

--- a/fix-old-ie.css
+++ b/fix-old-ie.css
@@ -4,7 +4,7 @@
  *
  * Copyright 2015-2019 Zachary Yaro
  * Released under the MIT license
- * http://materialz.zmyaro.com/LICENSE.txt
+ * https://materialz.dev/LICENSE.txt
  */
 
 @charset "UTF-8";
