--- a/material-elements.css
+++ b/material-elements.css
@@ -3,7 +3,7 @@
  *
  * Copyright 2015-2020 Zachary Yaro
  * Released under the MIT license
- * http://materialz.zmyaro.com/LICENSE.txt
+ * https://materialz.dev/LICENSE.txt
  */
 
 @charset "UTF-8";
